[build-system]
requires = ["hatchling>=1.26"]
build-backend = "hatchling.build"

[project]
name = "universal-service"
version = "0.1.0"
description = "Telegram commerce service with direct manual fulfillment"
requires-python = ">=3.12"
dependencies = [
  "aiogram>=3.25,<4",
  "alembic>=1.14,<2",
  "asyncpg>=0.30,<1",
  "cryptography>=44,<50",
  "fastapi>=0.115,<1",
  "flask>=3.1,<4",
  "gunicorn>=23,<24",
  "prometheus-client>=0.21,<1",
  "pydantic-settings>=2.7,<3",
  "python-multipart>=0.0.20,<1",
  "sqlalchemy[asyncio]>=2.0.36,<3",
  "structlog>=24.4,<26",
  "uvicorn[standard]>=0.34,<1",
]

[project.optional-dependencies]
dev = [
  "aiosqlite>=0.20,<1",
  "pytest>=8.3,<9",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
]

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
target-version = "py312"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP", "ASYNC", "S"]
ignore = ["S101"]
